[gd_scene load_steps=9 format=3 uid="uid://daf84icc03tyk"]

[ext_resource type="Script" path="res://Game/DialogicSystem/TextArea.gd" id="1_5gxyb"]
[ext_resource type="FontFile" uid="uid://dhpr1r7sjuwri" path="res://Resources/1Main/Fonts/GROBOLD.ttf" id="2_58poo"]
[ext_resource type="Texture2D" uid="uid://bpl82w5fop0u2" path="res://Resources/1Main/GUI/DialogBox2.png" id="3_lj8g2"]
[ext_resource type="Script" path="res://Game/DialogicSystem/RichTextLabel.gd" id="4_8v0xg"]
[ext_resource type="AudioStream" uid="uid://dctemn4koqsfd" path="res://Resources/1Main/Audio/SFX/keyboard_typing.wav" id="5_o6tkj"]
[ext_resource type="AudioStream" uid="uid://c4ishe4148nlo" path="res://Resources/1Main/Audio/SFX/1.mp3" id="6_rwbjb"]

[sub_resource type="FontVariation" id="FontVariation_3v14t"]
base_font = ExtResource("2_58poo")
spacing_glyph = 3

[sub_resource type="FontVariation" id="FontVariation_vffoc"]
variation_transform = Transform2D(1, 0.2, 0, 1, 0, 0)

[node name="TextArea" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_5gxyb")
text = ""
charactersPerSecond = 204
typingSound = "res://Resources/1Main/Audio/SFX/keyboard_typing.wav"
clickingSound = "res://Resources/1Main/Audio/SFX/genshin dialog.mp3"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 2

[node name="CharacterLine" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_direction = 2
layout_mode = 2
mouse_filter = 1

[node name="CharacterTexture" type="TextureRect" parent="VBoxContainer/CharacterLine"]
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.042
anchor_bottom = 1.0
offset_right = -20.64
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CharacterLine"]
visible = false
modulate = Color(1, 1, 1, 0.505882)
clip_contents = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_right = 0.192
anchor_bottom = 1.0
offset_left = -0.92
offset_top = 7.0
offset_right = -0.640015
offset_bottom = -1.0
expand_mode = 1

[node name="CharacterName" type="Label" parent="VBoxContainer/CharacterLine"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 0.136
anchor_bottom = 1.15
offset_left = 1.0
offset_right = -0.120026
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_3v14t")
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.373
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0499954
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lj8g2")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/TextureRect"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="RichLabel" type="RichTextLabel" parent="VBoxContainer/Control/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(1000, 50)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/italics_font = SubResource("FontVariation_vffoc")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/italics_font_size = 30
bbcode_enabled = true
scroll_active = false
script = ExtResource("4_8v0xg")

[node name="TypingSound" type="AudioStreamPlayer2D" parent="VBoxContainer/Control/TextureRect/MarginContainer/RichLabel"]
stream = ExtResource("5_o6tkj")
volume_db = -5.83
bus = &"SFX"
area_mask = 1114248

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rwbjb")
bus = &"SFX"
area_mask = 0

[connection signal="event_reached" from="VBoxContainer/Control/TextureRect/MarginContainer/RichLabel" to="." method="_on_rich_label_event_reached"]
[connection signal="gui_input" from="VBoxContainer/Control/TextureRect/MarginContainer/RichLabel" to="." method="_on_rich_label_gui_input"]
[connection signal="meta_hover_ended" from="VBoxContainer/Control/TextureRect/MarginContainer/RichLabel" to="." method="_on_rich_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="VBoxContainer/Control/TextureRect/MarginContainer/RichLabel" to="." method="_on_rich_label_meta_hover_started"]
